feat(stepback): step back command updated